# CiSE-Pandemic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.sh
config/: README.md  scenario.json
config/activities/: 1_base_scenario.json  2_using_masks.json  3_even_vaccination.json  4_elder_vaccination.json  5_immunity_loss.json
model/: main.cpp  pandemic_coupled.hpp
model/cell/: mobility.hpp  sirds_cell.hpp  state.hpp  vicinity.hpp
visualization/: README.md  launch_visualizer.sh  visualizer.ipynb
